--- a/hide.html
+++ b/hide.html
@@ -14,14 +14,14 @@
                 <div class="content_block">
                     <nav class="navbar navbar-expand-lg">
                         <div class="container">
-                            <a class="navbar-brand">УР STUDIO</a>
+                            <a class="navbar-brand" href="index.html">УР STUDIO</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
                             <span class="navbar-toggler-icon"></span>
                             </button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                     <li class="navbar_items">
-                                        <a class="navbar_item">Главная</a>
+                                        <a class="navbar_item" href="index.html">Главная</a>
                                     </li>
                                 </ul>
                                 <form class="d-flex" role="search">
