--- a/hide.html
+++ b/hide.html
@@ -113,11 +113,11 @@
                     </div>
                     <div class="list_update_block">
                         <iconify-icon icon="fluent:info-12-filled" width="24" height="24"  style="color: black"></iconify-icon>
-                        <h5>Hide & Seek — игровой режим, где игроки должны искать, а другие прятаться. Те, кто прячутся, выбирают блоки и прячутся. Искатели должны успеть найти всех пока не истёкло время, иначе победа достанется прячущимся.</h5>
+                        <h5>Hide & Seek — игровой режим, где игроки должны искать, а другие прятаться. Те, кто прячутся, выбирают блоки и прячутся. Искатели должны успеть найти всех пока не истекло время, иначе победа достанется прячущимся.</h5>
                     </div>
                     <div class="list_update_block">
                         <iconify-icon icon="fluent:info-12-filled" width="24" height="24"  style="color: black"></iconify-icon>
-                        <h5>Все игроки находятся в лобби. Чтобы начать игру, нужно зайти в один из четрёх лифтов.</h5>
+                        <h5>Все игроки находятся в лобби. Чтобы начать игру, нужно зайти в один из четырёх лифтов.</h5>
                     </div>
                     <h5 class="modal-title fs-5">Механики</h5>
                     <div class="list_update_block">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="list_update_block">
                         <iconify-icon icon="streamline:dangerous-zone-sign-solid" width="24" height="24"  style="color: black"></iconify-icon>
-                        <h5>В начале карты вы сможете выбрать блок за который хотите играть. Выбырайте с умом т.к. нельзя менять блок после выбора. Чтобы выбрать нажмите по нему [Пкм].</h5>
+                        <h5>В начале карты вы сможете выбрать блок за который хотите играть. Выбирайте с умом т.к. нельзя менять блок после выбора. Чтобы выбрать нажмите по нему [Пкм].</h5>
                     </div>
                     <div class="list_update_block">
                         <iconify-icon icon="fluent:info-12-filled" width="24" height="24"  style="color: black"></iconify-icon>
