--- a/hide.html
+++ b/hide.html
@@ -64,6 +64,7 @@
                         </div>-->
                         <!--<div class="collapse" id="version_1.20.2" style="width: 100%;">-->
                         <div class="version_block">
+                            <h5>Minecraft 1.20.4</h5>
                             <div class="download_blocks">
                                 <div class="download_block">
                                     <div class="download_top">
